--- a/paper/peekbank.bib
+++ b/paper/peekbank.bib
@@ -1,12 +1,34 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Mike Frank at 2024-11-15 10:43:30 -0800 
+%% Created for Mike Frank at 2024-11-15 13:28:04 -0800 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{christiansen2016,
+	author = {Christiansen, Morten H and Chater, Nick},
+	date-added = {2024-11-15 13:28:02 -0800},
+	date-modified = {2024-11-15 13:28:03 -0800},
+	journal = {Behavioral and brain sciences},
+	pages = {e62},
+	publisher = {Cambridge University Press},
+	title = {The now-or-never bottleneck: A fundamental constraint on language},
+	volume = {39},
+	year = {2016}}
+
+@article{chater2018,
+	author = {Chater, Nick and Christiansen, Morten H},
+	date-added = {2024-11-15 13:27:19 -0800},
+	date-modified = {2024-11-15 13:27:21 -0800},
+	journal = {Current opinion in behavioral sciences},
+	pages = {205--208},
+	publisher = {Elsevier},
+	title = {Language acquisition as skill learning},
+	volume = {21},
+	year = {2018}}
 
 @article{heathcote2000,
 	author = {Heathcote, Andrew and Brown, Scott and Mewhort, Douglas JK},
