--- a/paper/paper.Rmd
+++ b/paper/paper.Rmd
@@ -24,11 +24,11 @@ author_contributions: |
   Please provide details of author contributions here.
 
 abstract: |
-  Being a fluent language user involves not just knowing how to combine words into meaningful sentences, but also being able to understand language as it unfolds in time. How does this skill develop over the course of early childhood?  And how does facility in word recognition relate to the growth of vocabulary?  We address these questions using data from Peekbank, an open database of eye-tracking experiments on children's early word recognition.  Combining 24 datasets with data from almost 2,000 children ages 1--6 years, we show that word recognition becomes faster, more accurate, and less variable across development, both within and across studies. Factor analysis revealed a cross-sectional coupling of word recognition speed and accuracy to parent-reported vocabulary and a longitudinal relationship such that children with faster language processing showed larger vocabulary growth. Together, these findings are consistent with the view that language processing is –– among other things –– a skill, and language learning is a process of skill learning. 
+  Being a fluent language user involves not just knowing how to combine words into meaningful sentences, but also being able to understand language as it unfolds in time. How does this skill develop over the course of early childhood?  And how does facility in word recognition relate to the growth of vocabulary?  We address these questions using data from Peekbank, an open database of eye-tracking experiments on children's early word recognition.  Combining 24 datasets with data from almost 2,000 children ages 1--6 years, we show that word recognition becomes faster, more accurate, and less variable across development, both within and across studies. Factor analysis reveals a cross-sectional coupling of word recognition speed and accuracy to parent-reported vocabulary as well as a longitudinal relationship such that children with faster language processing tend to show larger vocabulary growth. Together, these findings support the view that language processing is –– among other things –– a skill, and that this skill plays a role in early language learning. 
 
 
 significance: |
-  Early language development is a key part of children's development that also sets the stage for later academic success. The efficiency with which children recognize words provides a measurement of their real-time language processing, which has been argued to be a key part of the learning process. Here we use a large dataset of eye-tracking data from many different experiments to map out the development of word recognition, finding that this process becomes faster, more accurate, and less variable in the period between one and six years of age. This trajectory is consistent with the idea that understanding language is a skill that improves gradually with practice.
+  Early language development is a key part of children's development that also sets the stage for later academic success. The efficiency with which children recognize words provides a measurement of their real-time language processing, which has been argued to be a key part of the learning process. Here we use a large dataset of eye-tracking data from many different experiments to map out the development of word recognition, finding that this process becomes faster, more accurate, and less variable in the period between one and six years of age, and that children who are better at word recognition tend to have larger and faster growing vocabularies. Understanding language is a skill that improves gradually with practice.
 
 acknowledgements: |
   This work was supported by a grant from the Jacobs Foundation. 
@@ -53,12 +53,47 @@ output: rticles::pnas_article
 ---
 
 
-\dropcap{C}hildren acquiring a language are learning a body of knowledge -- a set of words and the ways they are combined -- but they are also learning to deploy this knowledge in the myriad complex, noisy, and fast-moving environments in which language is used. As children enter their second year, language explodes onto the scene; children's vocabulary and grammatical abilities grow rapidly in tandem [@bates1994developmental;@frank2021]. This growth in knowledge is also accompanied by changes in their language processing: they become quicker and more accurate in recognizing words and matching them with their referents [@fernald1998;@peter2019;@bergelson2020comprehension].
+\dropcap{C}hildren acquiring a language are learning a body of knowledge -- a set of words and the ways they are combined -- but they are also learning to deploy this knowledge in the myriad complex, noisy, and fast-moving environments in which language is used. As children enter their second year, language explodes onto the scene; both vocabulary and grammatical abilities grow rapidly and in tandem [@bates1994developmental;@frank2021]. This growth in knowledge is also accompanied by changes in  language processing: children become quicker and more accurate in recognizing words and matching them with their referents [@fernald1998;@peter2019;@bergelson2020comprehension].
 
 Yet unlike language production, which is manifest via overt behavior, evidence for word recognition is often more subtle. Very young children with incomplete knowledge may not be able to point to the correct referent of a word, but they may still have some representation of word meaning [@bergelson2012]. Eye tracking has thus emerged as a key method that allows the measurement of language comprehension with high temporal resolution: both adults and children reliably fixate the referent of a spoken word soon after it is spoken [@tanenhaus1995integration;@altmann1999incremental;@fernald1998;@fernald2008]. The relative timecourse of fixation then can provide an index of both the comprehender's ability and the properties of the stimulus. 
 
-The version of this method that is used with children goes by many names, including the "intermodal preferential looking paradigm" and the "looking while listening" paradigm (or LWL, the name we adopt here) [@hirsh1996intermodal;@reznick1990visual;@fernald2008]. In these experiments, children are typically shown a series of trials in which two images are displayed side by side and they are asked to find one of them. For example, a ball and a book might be shown, and the child might hear "Look at the ball! Can you find it?" Accuracy is then computed as the proportion of time they fixate the correct image within a fixed window after the onset of the noun ("ball" in this case). Reaction time is typically computed only on trials in which the child is fixating the distractor image (the book); in these cases, the average time it takes to shift fixation to the target is used as an index of processing speed. 
-The seminal work using this method showed that children's speed and accuracy both increase rapidly across the second year [@fernald1998;@reznick1990visual]. 
+
+\begin{table*}[h!]
+\centering
+\begin{tabular}{rlrrrrrrrll}
+  \hline
+ & dataset\_name & N subjects & N admins & Mean Age & Min Age & Max Age & Avg Trials & Avg RT Trials & CDIs & longitudinal \\ 
+  \hline
+1 & reflook\_v4 & 310 & 310 & 36.82 & 12.24 & 60.00 & 6.21 & 2.87 &  &  \\ 
+  2 & yurovsky\_2017 & 282 & 282 & 25.64 & 12.59 & 58.65 & 5.95 & 2.79 &  &  \\ 
+  3 & weaver\_zettersten\_2024 & 141 & 248 & 15.73 & 13.50 & 23.60 & 18.10 & 6.72 & x & x \\ 
+  4 & fernald\_marchman\_2012 & 122 & 678 & 23.92 & 17.00 & 32.00 & 16.78 & 7.17 & x & x \\ 
+  5 & sander-montant\_2022 & 122 & 122 & 21.94 & 12.02 & 31.11 & 10.07 & 4.20 & x &  \\ 
+  6 & frank\_tablet\_2016 & 104 & 104 & 33.89 & 12.13 & 59.84 & 5.87 & 2.74 &  &  \\ 
+  7 & baumgartner\_2014 & 100 & 100 & 12.01 & 12.00 & 13.00 & 4.00 & 2.31 & x &  \\ 
+  8 & fmw\_2013 &  80 & 179 & 20.04 & 17.00 & 26.00 & 21.26 & 8.44 & x & x \\ 
+  9 & adams\_marchman\_2018 &  69 & 711 & 23.57 & 12.00 & 38.00 & 18.44 & 7.92 & x & x \\ 
+  10 & potter\_canine &  67 &  67 & 23.76 & 21.00 & 27.00 & 10.38 & 3.80 & x &  \\ 
+  11 & fernald\_totlot &  63 & 229 & 19.68 & 15.00 & 25.00 & 15.22 & 6.05 & x & x \\ 
+  12 & pomper\_prime &  63 &  63 & 39.73 & 37.90 & 42.00 & 12.98 & 5.34 &  &  \\ 
+  13 & pomper\_saffran\_2016 &  60 &  60 & 44.27 & 41.00 & 47.00 & 7.55 & 3.30 &  &  \\ 
+  14 & swingley\_aslin\_2002 &  50 &  50 & 15.09 & 14.13 & 16.00 & 11.74 & 3.79 & x &  \\ 
+  15 & pomper\_salientme &  44 &  44 & 40.11 & 38.00 & 43.00 & 5.30 & 2.34 &  &  \\ 
+  16 & perry\_cowpig &  42 &  42 & 20.45 & 19.00 & 22.00 & 14.88 & 5.43 &  &  \\ 
+  17 & ronfard\_2021 &  40 &  40 & 19.95 & 18.00 & 24.00 & 18.54 & 7.62 & x &  \\ 
+  18 & bacon\_gendercues &  38 &  38 & 22.87 & 22.00 & 24.00 & 18.16 & 8.00 & x &  \\ 
+  19 & garrison\_bergelson\_2020 &  35 &  35 & 14.46 & 12.00 & 18.00 & 27.94 & 9.59 & x &  \\ 
+  20 & pomper\_yumme &  32 &  32 & 26.38 & 25.00 & 28.00 & 7.62 & 2.31 &  &  \\ 
+  21 & mahr\_coartic &  29 &  29 & 20.83 & 18.10 & 23.80 & 24.38 & 8.86 & x &  \\ 
+  22 & ferguson\_eyetrackingr &  28 &  28 & 19.71 & 18.02 & 21.86 & 5.54 & 2.33 & x &  \\ 
+  23 & potter\_remix &  23 &  44 & 22.59 & 18.00 & 29.00 & 6.07 & 2.58 & x & x \\ 
+  24 & newman\_genderdistractor &  19 &  19 & 30.12 & 29.23 & 30.84 & 13.11 & 4.94 &  &  \\ 
+   \hline
+\end{tabular}
+\caption{Characteristics of included datasets from Peekbank. `Admins` denotes separate experimental sessions.\label{tab:datasets}} 
+\end{table*}
+
+The version of this method that is used with children goes by many names, including the "intermodal preferential looking paradigm" and the "looking while listening" paradigm (LWL, the name we adopt here) [@hirsh1996intermodal;@reznick1990visual;@fernald2008]. In LWL experiments, children are typically shown a series of trials in which two images are displayed side by side and they are asked to find one of them. For example, a ball and a book might be shown, and the child might hear "Look at the ball! Can you find it?". Accuracy is then computed as the proportion of time they fixate the correct image within a fixed window after the onset of the noun ("ball" in this case). Reaction time is computed only on trials in which the child is fixating the distractor image (the book); in these cases, the average time it takes to shift fixation to the target is used as an index of processing speed. The seminal work using this method showed that children's speed and accuracy both increase rapidly across the second year [@fernald1998;@reznick1990visual]. 
 
 <!-- % MCF: we go back and forth now between word recognition and language processing. is this oK? -->
 <!-- % MCF: I haven't adopted the fernald "efficiency" term, which groups speed and accuracy as one process... in part this seems to presuppose the answer to some bits of our factor analysis... -->
@@ -72,9 +107,8 @@ Speed of word recognition has been used as an index of individual differences in
 
 <!-- % MCF: is this question statement sharp enough?  -->
 
-Yet individual experiments measuring processing with young children typically recruit relatively small samples in a restricted range of ages. These samples provide neither the range of ages nor the number of participants to estimate the broader dynamics of how word recognition changes developmentally and how it connects with broader changes across the lifespan [@mcmurray2022slow;@colby2023efficiency]. Further, previous findings do not shed light on whether processing efficiency indexes a separate construct and might vary independently from vocabulary size, or whether it is tightly coupled to vocabulary such that children with larger vocabularies are also better language processors. 
+Yet individual experiments measuring processing with young children typically recruit relatively small samples in a restricted range of ages. These samples provide neither the range of ages nor the number of participants to estimate the broader dynamics of how word recognition changes developmentally and how it connects with broader changes across the lifespan [@mcmurray2022slow;@colby2023efficiency]. One influential recent hypothesis refers to language learning as a process of learning the skill of real-time processing  [@christiansen2016;@chater2018]. On this hypothesis, we should expect to see many of the signatures of expertise and skill learning in language processing: speed of processing should decrease asymptotically with age [@kail1991;@anderson1982] and trial-to-trial variability should decrease [@todorov2002optimal]. Further, previous findings have provided limited and sometimes conflicting evidence on the relation between word recognition and language learning [@Weisleder2013;@peter2019;@newbury2016interrelationships]. To the extent that there are consistent relations between vocabulary and word recognition, these should be visible in a larger dataset. 
 
-% suggest that speed of processing is related to concurrent and later language ability [@peter2019;@marchman2008]. This work is consistent with several explanations, however. First, it is possible that processing speed indexes a different construct than accuracy. On this kind of account, speedier processors may be differentiated from those children with a larger vocabulary; identifying these children thus helps to increase predictive accuracy. An alternative account, however, is that processing speed and accuracy reflect two aspects of how a single construct is translated into behavior (in this case, eye movements). On this second account, the increase in predictive accuracy by using reaction times is accounted for because each has independent measurement error -- the inclusion of both into a model thus increases precision. Thus, the factor structure of early language processing -- and in particular, whether there is evidence for orthogonal variation in early language related to processing speed -- is an open question. 
 
 ```{r loading, echo=FALSE, message=FALSE, warning=FALSE}
 suppressPackageStartupMessages(library(here))
@@ -126,40 +160,6 @@ xtable(dataset_characteristics,
        caption = "Characteristics of included datasets from Peekbank. `Admins` denotes separate experimental sessions.")
 ```
 
-\begin{table*}[t!]
-\centering
-\begin{tabular}{rlrrrrrrrll}
-  \hline
- & dataset\_name & N subjects & N admins & Mean Age & Min Age & Max Age & Avg Trials & Avg RT Trials & CDIs & longitudinal \\ 
-  \hline
-1 & reflook\_v4 & 310 & 310 & 36.82 & 12.24 & 60.00 & 6.21 & 2.87 &  &  \\ 
-  2 & yurovsky\_2017 & 282 & 282 & 25.64 & 12.59 & 58.65 & 5.95 & 2.79 &  &  \\ 
-  3 & weaver\_zettersten\_2024 & 141 & 248 & 15.73 & 13.50 & 23.60 & 18.10 & 6.72 & x & x \\ 
-  4 & fernald\_marchman\_2012 & 122 & 678 & 23.92 & 17.00 & 32.00 & 16.78 & 7.17 & x & x \\ 
-  5 & sander-montant\_2022 & 122 & 122 & 21.94 & 12.02 & 31.11 & 10.07 & 4.20 & x &  \\ 
-  6 & frank\_tablet\_2016 & 104 & 104 & 33.89 & 12.13 & 59.84 & 5.87 & 2.74 &  &  \\ 
-  7 & baumgartner\_2014 & 100 & 100 & 12.01 & 12.00 & 13.00 & 4.00 & 2.31 & x &  \\ 
-  8 & fmw\_2013 &  80 & 179 & 20.04 & 17.00 & 26.00 & 21.26 & 8.44 & x & x \\ 
-  9 & adams\_marchman\_2018 &  69 & 711 & 23.57 & 12.00 & 38.00 & 18.44 & 7.92 & x & x \\ 
-  10 & potter\_canine &  67 &  67 & 23.76 & 21.00 & 27.00 & 10.38 & 3.80 & x &  \\ 
-  11 & fernald\_totlot &  63 & 229 & 19.68 & 15.00 & 25.00 & 15.22 & 6.05 & x & x \\ 
-  12 & pomper\_prime &  63 &  63 & 39.73 & 37.90 & 42.00 & 12.98 & 5.34 &  &  \\ 
-  13 & pomper\_saffran\_2016 &  60 &  60 & 44.27 & 41.00 & 47.00 & 7.55 & 3.30 &  &  \\ 
-  14 & swingley\_aslin\_2002 &  50 &  50 & 15.09 & 14.13 & 16.00 & 11.74 & 3.79 & x &  \\ 
-  15 & pomper\_salientme &  44 &  44 & 40.11 & 38.00 & 43.00 & 5.30 & 2.34 &  &  \\ 
-  16 & perry\_cowpig &  42 &  42 & 20.45 & 19.00 & 22.00 & 14.88 & 5.43 &  &  \\ 
-  17 & ronfard\_2021 &  40 &  40 & 19.95 & 18.00 & 24.00 & 18.54 & 7.62 & x &  \\ 
-  18 & bacon\_gendercues &  38 &  38 & 22.87 & 22.00 & 24.00 & 18.16 & 8.00 & x &  \\ 
-  19 & garrison\_bergelson\_2020 &  35 &  35 & 14.46 & 12.00 & 18.00 & 27.94 & 9.59 & x &  \\ 
-  20 & pomper\_yumme &  32 &  32 & 26.38 & 25.00 & 28.00 & 7.62 & 2.31 &  &  \\ 
-  21 & mahr\_coartic &  29 &  29 & 20.83 & 18.10 & 23.80 & 24.38 & 8.86 & x &  \\ 
-  22 & ferguson\_eyetrackingr &  28 &  28 & 19.71 & 18.02 & 21.86 & 5.54 & 2.33 & x &  \\ 
-  23 & potter\_remix &  23 &  44 & 22.59 & 18.00 & 29.00 & 6.07 & 2.58 & x & x \\ 
-  24 & newman\_genderdistractor &  19 &  19 & 30.12 & 29.23 & 30.84 & 13.11 & 4.94 &  &  \\ 
-   \hline
-\end{tabular}
-\caption{Characteristics of included datasets from Peekbank. `Admins` denotes separate experimental sessions.\label{tab:datasets}} 
-\end{table*}
 
 # Results {.unnumbered}
 
@@ -299,12 +299,12 @@ We were next interested in whether the various different aspects of word recogni
 ```{r efa}
 d_sub_mat <- d_sub |>
   ungroup() |>
-  select(dataset_name, rt, rt_var, long_window_accuracy, long_window_acc_var, prod, comp, age, log_age) 
+  select(dataset_name, log_rt, log_rt_var, long_window_accuracy, long_window_acc_var, prod, comp, age, log_age) 
 
 
 d_sub_mat_s <- d_sub_mat |>
   ungroup() |>
-  mutate(across(all_of(c("rt", "rt_var", "long_window_accuracy", 
+  mutate(across(all_of(c("log_rt", "log_rt_var", "long_window_accuracy", 
                          "long_window_acc_var", "prod", "comp")), 
                        ~ age_scale(.x, age))) 
 
@@ -315,7 +315,7 @@ parallel_ana <- capture.output(fa.parallel(select(d_sub_mat, -dataset_name, -age
 ```{r cfa}
 fa3_model <- "vocab =~ prod + comp
               accuracy =~ long_window_accuracy + long_window_acc_var
-              speed =~ rt + rt_var"
+              speed =~ log_rt + log_rt_var"
 
 fit3 <- cfa(fa3_model, d_sub_mat_s, std.lv=TRUE, missing='fiml')
 
@@ -330,13 +330,13 @@ We fit a series of factor analytic models to explore the dimensionality of the d
 d_sub_mat_s_renamed <- d_sub_mat_s |>
   rename(acc = long_window_accuracy, 
          acc_sd = long_window_acc_var, 
-         rt_sd = rt_var)
+         log_rt_sd = log_rt_var)
 
 fa3_age_model <- "
 # measurement model
 vocab =~ prod + comp
 accuracy =~ acc + acc_sd
-speed =~ rt + rt_sd
+speed =~ log_rt + log_rt_sd
 
 # regressions
 vocab ~ log_age
@@ -352,14 +352,14 @@ layout_age = matrix(nrow=5, ncol = 6,
                          NA, NA, NA, NA, NA, NA, 
                          "speed",NA,"accuracy",NA,"vocab",NA,
                          NA, NA, NA, NA, NA, NA, 
-                         "rt_sd","rt", "acc",
+                         "log_rt","log_rt_sd", "acc",
                          "acc_sd", "prod","comp"), 
                 byrow = TRUE)
 
 graph_sem(model = fit3_age, text_size = 2, layout = t(layout_age))
 ```
 
-Figure \ref{fig:age_regression} shows a regression model fit to this confirmatory factor analysis, with log age predicting each latent variable. This regression model allows interpretation of the covariances between latent factors as partial correlations (controlling for age). All three latent factors were significantly related to one another, with speed and accuracy showing strong negative covariance ($\beta=$ `r fit3_age_summary$pe[21,"est"]`, SE = `r fit3_age_summary$pe[21,"se"]`, $p < .0001$) and weaker but significant covariation between speed and vocabulary ($\beta=$ `r fit3_age_summary$pe[20,"est"]`, SE = `r fit3_age_summary$pe[20,"se"]`, $p < .0001$) and accuracy and vocabulary ($\beta=$ `r fit3_age_summary$pe[19,"est"]`, SE = `r fit3_age_summary$pe[19,"se"]`, $p < .0001$). This model supports the idea that individual variation in speed and accuracy of word recognition is concurrently related to vocabulary beyond effects of age. 
+Figure \ref{fig:age_regression} shows a regression model fit to this confirmatory factor analysis, with log age predicting each latent variable. This regression model allows interpretation of the covariances between latent factors as partial correlations (controlling for age). All three latent factors were significantly related to one another, with speed and accuracy showing strong negative covariance ($\beta=$ `r round(fit3_age_summary$pe[21,"est"],3)`, SE = `r round(fit3_age_summary$pe[21,"se"],3)`, $p < .0001$) and weaker but significant covariation between speed and vocabulary ($\beta=$ `r round(fit3_age_summary$pe[20,"est"],3)`, SE = `r round(fit3_age_summary$pe[20,"se"],3)`, $p < .0001$) and accuracy and vocabulary ($\beta=$ `r round(fit3_age_summary$pe[19,"est"],3)`, SE = `r round(fit3_age_summary$pe[19,"se"],3)`, $p < .0001$). This model supports the idea that individual variation in speed and accuracy of word recognition is concurrently related to vocabulary beyond effects of age. 
 
 
 ## Speed of processing relates to vocabulary growth {.unnumbered}
@@ -410,7 +410,7 @@ While we fit the latent variable models above to the full cross-sectional datase
 
 ```{r prep_long_data}
 d_sub_long <- d_sub |>
-  mutate(across(all_of(c("rt", "rt_var", "long_window_accuracy",
+  mutate(across(all_of(c("log_rt", "log_rt_var", "long_window_accuracy",
                          "long_window_acc_var", "prod", "comp")),
                 ~ age_scale(.x,age))) |>
   group_by(subject_id) |>
@@ -420,19 +420,22 @@ d_sub_long <- d_sub |>
 
 d_sub_long_t <- d_sub_long |> 
   mutate(t = ifelse(delta_t > MONTH_CUTOFF, "t2", "t1")) |>
+  rename(acc = long_window_accuracy,
+         acc_sd = long_window_acc_var,
+         log_rt_sd = log_rt_var) |>
   group_by(subject_id, dataset_name, t) |>
-  summarise(across(all_of(c("rt", "rt_var", "long_window_accuracy",
-                            "long_window_acc_var", "prod", "comp")),
+  summarise(across(all_of(c("log_rt", "log_rt_sd", "acc",
+                            "acc_sd", "prod", "comp")),
                    ~ mean(.x, na.rm=TRUE))) |> 
-  mutate(across(all_of(c("rt", "rt_var", "long_window_accuracy",
-                         "long_window_acc_var", "prod", "comp")),
+  mutate(across(all_of(c("log_rt", "log_rt_sd", "acc",
+                         "acc_sd", "prod", "comp")),
                 ~ ifelse(is.nan(.x), NA, .x)))
 
 d_sub_wide <- d_sub_long_t |>
   pivot_wider(id_cols = c("subject_id","dataset_name"), 
               names_from = "t",
-              values_from = c("rt", "rt_var", "long_window_accuracy", 
-                              "long_window_acc_var", "prod", "comp"))
+              values_from = c("log_rt", "log_rt_sd", "acc", 
+                              "acc_sd", "prod", "comp"))
 ```
 
 
@@ -440,12 +443,12 @@ d_sub_wide <- d_sub_long_t |>
 fa3_model_long <- "
 # measurement model
 vocab_t1 =~ 1*prod_t1 + s1*comp_t1
-accuracy_t1 =~ 1*long_window_accuracy_t1 + s2*long_window_acc_var_t1
-speed_t1 =~ 1*rt_t1 + s3*rt_var_t1
+accuracy_t1 =~ 1*acc_t1 + s2*acc_sd_t1
+speed_t1 =~ 1*log_rt_t1 + s3*log_rt_sd_t1
 
 vocab_t2 =~ 1*prod_t2 + s1*comp_t2
-accuracy_t2 =~ 1*long_window_accuracy_t2 + s2*long_window_acc_var_t2
-speed_t2 =~ 1*rt_t2 + s3*rt_var_t2
+accuracy_t2 =~ 1*acc_t2 + s2*acc_sd_t2
+speed_t2 =~ 1*log_rt_t2 + s3*log_rt_sd_t2
 
 # longitudinal relationships
 vocab_t2 ~ vocab_t1 + speed_t1 + accuracy_t1
@@ -490,13 +493,13 @@ The fitted longitudinal model is shown in \ref{fig:longitudinal}. Overall fit st
 
 ```{r longitudinal, fig.env="figure*", height = 3.5, fig.cap = "Coupled change model."}
 layout_long = matrix(nrow=7, ncol = 7,
-                     data = c("rt_var_t1","rt_t1", "long_window_accuracy_t1", "long_window_acc_var_t1", "prod_t1","comp_t1", NA,
+                     data = c("log_rt_sd_t1","log_rt_t1", "acc_t1", "acc_sd_t1", "prod_t1","comp_t1", NA,
                                NA, NA, NA, NA, NA, NA,  NA,
                               "speed_t1",NA,"accuracy_t1",NA,"vocab_t1",NA,  NA,
                               NA, NA, NA, NA, NA, NA,  NA,
                                NA,"speed_t2",NA,"accuracy_t2",NA,NA,"vocab_t2",
                                NA, NA, NA, NA, NA, NA,  NA,
-                               NA,"rt_var_t2","rt_t2", "long_window_accuracy_t2", "long_window_acc_var_t2", "prod_t2","comp_t2"), 
+                               NA,"log_rt_sd_t2","log_rt_t2", "acc_t2", "acc_sd_t2", "prod_t2","comp_t2"), 
                      byrow = TRUE)
 graph_sem(model = fit3_long, text_size = 3, layout = t(layout_long))
 ```
@@ -505,12 +508,12 @@ graph_sem(model = fit3_long, text_size = 3, layout = t(layout_long))
 fa3_model_long_control <- "
 # measurement model
 vocab_t1 =~ 1*prod_t1 + s1*comp_t1
-accuracy_t1 =~ 1*long_window_accuracy_t1 + s2*long_window_acc_var_t1
-speed_t1 =~ 1*rt_t1 + s3*rt_var_t1
+accuracy_t1 =~ 1*acc_t1 + s2*acc_sd_t1
+speed_t1 =~ 1*log_rt_t1 + s3*log_rt_sd_t1
 
 vocab_t2 =~ 1*prod_t2 + s1*comp_t2
-accuracy_t2 =~ 1*long_window_accuracy_t2 + s2*long_window_acc_var_t2
-speed_t2 =~ 1*rt_t2 + s3*rt_var_t2
+accuracy_t2 =~ 1*acc_t2 + s2*acc_sd_t2
+speed_t2 =~ 1*log_rt_t2 + s3*log_rt_sd_t2
 
 # longitudinal relationships
 vocab_t2 ~ vocab_t1 + 0*speed_t1 + accuracy_t1
@@ -549,7 +552,7 @@ speed_vocab_anova$p = speed_vocab_anova$`Pr(>Chisq)`
 speed_vocab_anova$c2d = speed_vocab_anova$`Chisq diff`
 ```
 
-Critically, LWL processing speed at time 1 predicted vocabulary at time 2 ($\beta=$ `r fit3_long_summary$pe[14,"est"]`, SE = `r fit3_long_summary$pe[21,"se"]`, $p =$ `r fit3_long_summary$pe[14,"pvalue"]`). This model significantly improved fit compared with a model that set this coupling parameter to zero but was otherwise unchanged ($\chi^2 =$ `r round(speed_vocab_anova$c2d[2], 2)`, $p = $ `r round(speed_vocab_anova$p[2], 4)`). These findings are consistent with the claim that faster processing is related to longitudinal growth in vocabulary [@fernald2012,@Weisleder2013]. 
+Critically, LWL processing speed at time 1 predicted vocabulary at time 2 ($\beta=$ `r round(fit3_long_summary$pe[14,"est"],3)`, SE = `r round(fit3_long_summary$pe[21,"se"],3)`, $p =$ `r round(fit3_long_summary$pe[14,"pvalue"],3)`). This model significantly improved fit compared with a model that set this coupling parameter to zero but was otherwise unchanged ($\chi^2 = `r round(speed_vocab_anova$c2d[2], 2)`$, $p =  `r round(speed_vocab_anova$p[2], 4)`$). These findings are consistent with the claim that faster processing is related to longitudinal growth in vocabulary [@fernald2012,@Weisleder2013]. 
 
 
 # Discussion {.unnumbered}
