--- a/paper/peekbank.bib
+++ b/paper/peekbank.bib
@@ -1,12 +1,96 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Mike Frank at 2024-11-15 13:28:04 -0800 
+%% Created for Mike Frank at 2024-11-16 08:26:55 -0800 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{lany2018,
+	author = {Lany, Jill},
+	date-added = {2024-11-16 08:26:53 -0800},
+	date-modified = {2024-11-16 08:26:55 -0800},
+	journal = {Developmental science},
+	number = {3},
+	pages = {e12569},
+	publisher = {Wiley Online Library},
+	title = {Lexical-processing efficiency leverages novel word learning in infants and toddlers},
+	volume = {21},
+	year = {2018}}
+
+@article{marchman2016,
+	author = {Marchman, Virginia A and Adams, Katherine A and Loi, Elizabeth C and Fernald, Anne and Feldman, Heidi M},
+	date-added = {2024-11-16 08:25:10 -0800},
+	date-modified = {2024-11-16 08:25:13 -0800},
+	journal = {Child Neuropsychology},
+	number = {6},
+	pages = {649--665},
+	publisher = {Taylor \& Francis},
+	title = {Early language processing efficiency predicts later receptive vocabulary outcomes in children born preterm},
+	volume = {22},
+	year = {2016}}
+
+@article{macdonald2018,
+	author = {MacDonald, Kyle and LaMarr, Todd and Corina, David and Marchman, Virginia A and Fernald, Anne},
+	date-added = {2024-11-16 08:02:36 -0800},
+	date-modified = {2024-11-16 08:02:43 -0800},
+	journal = {Developmental science},
+	number = {6},
+	pages = {e12672},
+	publisher = {Wiley Online Library},
+	title = {Real-time lexical comprehension in young children learning American Sign Language},
+	volume = {21},
+	year = {2018}}
+
+@article{fernald2006,
+	author = {Fernald, Anne and Perfors, Amy and Marchman, Virginia A},
+	date-added = {2024-11-16 08:02:10 -0800},
+	date-modified = {2024-11-16 08:02:11 -0800},
+	journal = {Developmental psychology},
+	number = {1},
+	pages = {98},
+	publisher = {American Psychological Association},
+	title = {Picking up speed in understanding: Speech processing efficiency and vocabulary growth across the 2nd year.},
+	volume = {42},
+	year = {2006}}
+
+@article{bergelson2017,
+	author = {Bergelson, Elika and Aslin, Richard N},
+	date-added = {2024-11-16 07:24:20 -0800},
+	date-modified = {2024-11-16 07:24:22 -0800},
+	journal = {Proceedings of the National Academy of Sciences},
+	number = {49},
+	pages = {12916--12921},
+	publisher = {National Acad Sciences},
+	title = {Nature and origins of the lexicon in 6-mo-olds},
+	volume = {114},
+	year = {2017}}
+
+@article{mani2010,
+	author = {Mani, Nivedita and Plunkett, Kim},
+	date-added = {2024-11-16 07:23:44 -0800},
+	date-modified = {2024-11-16 07:23:46 -0800},
+	journal = {Psychological science},
+	number = {7},
+	pages = {908--913},
+	publisher = {Sage Publications Sage CA: Los Angeles, CA},
+	title = {In the infant's mind's ear: Evidence for implicit naming in 18-month-olds},
+	volume = {21},
+	year = {2010}}
+
+@article{mani2011,
+	author = {Mani, Nivedita and Plunkett, Kim},
+	date-added = {2024-11-16 07:22:47 -0800},
+	date-modified = {2024-11-16 07:22:55 -0800},
+	journal = {Cognition},
+	number = {2},
+	pages = {196--206},
+	publisher = {Elsevier},
+	title = {Phonological priming and cohort effects in toddlers},
+	volume = {121},
+	year = {2011}}
 
 @article{christiansen2016,
 	author = {Christiansen, Morten H and Chater, Nick},
